--- a/products/templates/products/includes/quantity_input_script.html
+++ b/products/templates/products/includes/quantity_input_script.html
@@ -1,43 +1,49 @@
 <script type="text/javascript">
-    // Disable +/- buttons outside 1-99 range
-    function handleEnableDisable(itemId) {
-        var currentValue = parseInt($(`#id_qty_${itemId}`).val());
-        var minusDisabled = currentValue < 2;
-        var plusDisabled = currentValue > 98;
-        $(`#decrement-qty_${itemId}`).prop('disabled', minusDisabled);
-        $(`#increment-qty_${itemId}`).prop('disabled', plusDisabled);
+    // Function to handle enabling/disabling minus button
+    function handleEnableDisable($qtyInput) {
+        var currentValue = parseInt($qtyInput.val());
+        var $formGroup = $qtyInput.closest('.input-group');
+
+        var $minusBtn = $formGroup.find('.decrement-qty');
+        var $plusBtn = $formGroup.find('.increment-qty');
+
+        // Disable minus if at minimum
+        $minusBtn.prop('disabled', currentValue <= 1);
+        // Disable plus if at maximum
+        $plusBtn.prop('disabled', currentValue >= 99);
     }
 
-    // Ensure proper enabling/disabling of all inputs on page load
-    var allQtyInputs = $('.qty_input');
-    for(var i = 0; i < allQtyInputs.length; i++){
-        var itemId = $(allQtyInputs[i]).data('item_id');
-        handleEnableDisable(itemId);
-    }
-
-    // Check enable/disable every time the input is changed
-    $('.qty_input').change(function() {
-        var itemId = $(this).data('item_id');
-        handleEnableDisable(itemId);
+    // Initialize all inputs on page load
+    $(document).ready(function() {
+        $('.qty-input').each(function() {
+            handleEnableDisable($(this));
+        });
     });
 
-    // Increment quantity
+    // When the input value changes
+    $('.qty-input').change(function() {
+        handleEnableDisable($(this));
+    });
+
+    // Increment button click
     $('.increment-qty').click(function(e) {
-       e.preventDefault();
-       var closestInput = $(this).closest('.input-group').find('.qty_input')[0];
-       var currentValue = parseInt($(closestInput).val());
-       $(closestInput).val(currentValue + 1);
-       var itemId = $(this).data('item_id');
-       handleEnableDisable(itemId);
+        e.preventDefault();
+        var $formGroup = $(this).closest('.input-group');
+        var $qtyInput = $formGroup.find('.qty-input');
+        var currentValue = parseInt($qtyInput.val());
+        if (currentValue < 99) {
+            $qtyInput.val(currentValue + 1).change();
+        }
     });
-    
-    // Decrement quantity
+
+    // Decrement button click
     $('.decrement-qty').click(function(e) {
-       e.preventDefault();
-       var closestInput = $(this).closest('.input-group').find('.qty_input')[0];
-       var currentValue = parseInt($(closestInput).val());
-       $(closestInput).val(currentValue - 1);
-       var itemId = $(this).data('item_id');
-       handleEnableDisable(itemId);
+        e.preventDefault();
+        var $formGroup = $(this).closest('.input-group');
+        var $qtyInput = $formGroup.find('.qty-input');
+        var currentValue = parseInt($qtyInput.val());
+        if (currentValue > 1) {
+            $qtyInput.val(currentValue - 1).change();
+        }
     });
 </script>
